# st-modbus

./: Cargo.toml  LICENSE
embassy/examples/stm32f4/: Cargo.toml
embassy/examples/stm32f4/.cargo/: config.toml
src/: main.rs
