[package]
name = "st-modbus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Change stm32f429zi to your chip name, if necessary.
embassy-stm32 = { version = "0.1.0", path = "./embassy/embassy-stm32", features = ["nightly", "unstable-traits", "defmt", "stm32f407ve", "unstable-pac", "memory-x", "time-driver-any", "exti", "embedded-sdmmc", "chrono"]  }
embassy-sync = { version = "0.3.0", path = "./embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.3.0", path = "./embassy/embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.3", path = "./embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"] }
embassy-usb = { version = "0.1.0", path = "./embassy/embassy-usb", features = ["defmt"] }
embassy-net = { version = "0.1.0", path = "./embassy/embassy-net", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "nightly"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-io = { version = "0.5.0" }
embedded-io-async = { version = "0.5.0" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.0"
micromath = "2.0.0"
static_cell = { version = "1.1", features = ["nightly"]}
chrono = { version = "^0.4", default-features = false}
rmodbus = { version = "0.7.6", default-features = false, features = ["fixedvec"] }
fixedvec = "0.2.4"

[profile.release]
debug = 2

